--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CATALOGOS stanhome</title>
-    <link rel="icon" href="https://i.ibb.co/NS0jwFk/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbaChTfSZMpWWKReSIpOm91ePocxsGQOXexq_M1KNZDFTW4-oYwLUQLNCrEOMEAWXwmGeg_zZy3oKF4-sp4W1CLucLbNNIQkWYWY2gx4yEIgpZl44AliBCc5kY5RYmxa00b3GmRCfvx-5MyLzBMemTZyyPzZ-t8HXS11HpD4AXz82CNWs0B4V4_P-eds0/s32/favicon-32x32.png" type="image/png">
     <link rel="manifest" href="manifest.json">
     <style>
         body {
